tests/super/super.exp
Error ---------------------------------------------------------------------------------------------- constructor.js:15:5

Must call `super` before accessing this [1] in a derived constructor. [reference-before-declaration]

   constructor.js:15:5
   15|     this.y; // error (no super call)
           ^^^^

References:
   constructor.js:12:7
   12| class D extends A {
             ^ [1]


Error ---------------------------------------------------------------------------------------------- constructor.js:16:5

Must call `super` before accessing this [1] in a derived constructor. [reference-before-declaration]

   constructor.js:16:5
   16|     this.x; // error (no super call)
           ^^^^

References:
   constructor.js:12:7
   12| class D extends A {
             ^ [1]


Error --------------------------------------------------------------------------------------------- constructor.js:36:10

Must call `super` before accessing this [1] in a derived constructor. [reference-before-declaration]

   constructor.js:36:10
   36|     leak(this); // error (no super call yet)
                ^^^^

References:
   constructor.js:33:7
   33| class F extends A {
             ^ [1]


Error ---------------------------------------------------------------------------------------------- constructor.js:45:5

Must call `super` before accessing super [1] in a derived constructor. [reference-before-declaration]

   constructor.js:45:5
   45|     super.x; // error (no super call)
           ^^^^^

References:
   constructor.js:43:17
   43| class G extends A {
                       ^ [1]


Error --------------------------------------------------------------------------------------------- constructor.js:69:11

Must call `super` before accessing this [1] in a derived constructor. [reference-before-declaration]

   constructor.js:69:11
   69|     super(this); // error (no super call yet)
                 ^^^^

References:
   constructor.js:67:7
   67| class I extends I_ {
             ^ [1]


Error --------------------------------------------------------------------------------------------- constructor.js:83:17

Must call `super` before accessing this [1] in a derived constructor. [reference-before-declaration]

   constructor.js:83:17
   83|     super(() => this.foo()); // error (no super call yet)
                       ^^^^

References:
   constructor.js:81:7
   81| class J extends J_ {
             ^ [1]


Error -------------------------------------------------------------------------------------------- constructor.js:110:12

Cannot return `false` because boolean [1] is incompatible with constructor void return [2]. [incompatible-return]

   constructor.js:110:12
   110|     return false; // error: boolean ~> void
                   ^^^^^ [1]

References:
   constructor.js:109:16
   109|   constructor() {
                        [2]


Error -------------------------------------------------------------------------------------------- constructor.js:115:22

Cannot assign `super()` to `x` because constructor void return [1] is incompatible with boolean [2]. [incompatible-type]

   constructor.js:115:22
   115|     let x: boolean = super(); // error: void ~> boolean
                             ^^^^^^^

References:
   constructor.js:109:16
   109|   constructor() {
                        [1]
   constructor.js:115:12
   115|     let x: boolean = super(); // error: void ~> boolean
                   ^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- constructor.js:116:12

Cannot return `x` because boolean [1] is incompatible with constructor void return [2]. [incompatible-return]

   constructor.js:116:12
   116|     return x; // error: boolean ~> void
                   ^

References:
   constructor.js:115:12
   115|     let x: boolean = super(); // error: void ~> boolean
                   ^^^^^^^ [1]
   constructor.js:114:16
   114|   constructor() {
                        [2]


Error -------------------------------------------------------------------------------------------- constructor.js:124:12

Cannot return object literal because object literal [1] is incompatible with constructor void return [2].
[incompatible-return]

   constructor.js:124:12
   124|     return {foo: 'foo'}; // error: object ~> void
                   ^^^^^^^^^^^^ [1]

References:
   constructor.js:123:16
   123|   constructor() {
                        [2]


Error -------------------------------------------------------------------------------------------- constructor.js:136:18

Cannot return `N_` because `N_` [1] is incompatible with constructor void return [2]. [incompatible-return]

   constructor.js:136:18
   136|   constructor(): this { // error: this ~> void
                         ^^^^ [1]

References:
   constructor.js:136:16
   136|   constructor(): this { // error: this ~> void
                       ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- constructor.js:136:18

Cannot return `N_` because `this` [1] is incompatible with constructor void return [2]. [incompatible-return]

   constructor.js:136:18
   136|   constructor(): this { // error: this ~> void
                         ^^^^ [1]

References:
   constructor.js:136:16
   136|   constructor(): this { // error: this ~> void
                       ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- constructor.js:143:12

Cannot return `super()` because `N` [1] is incompatible with constructor void return [2]. [incompatible-return]

   constructor.js:143:12
   143|     return super(); // error: N ~> void
                   ^^^^^^^

References:
   constructor.js:136:18
   136|   constructor(): this { // error: this ~> void
                         ^^^^ [1]
   constructor.js:142:16
   142|   constructor() {
                        [2]


Error ------------------------------------------------------------------------------------------ multi-call-error.js:9:9

Cannot declare this [1] because the name is already bound. [name-already-bound]

   multi-call-error.js:9:9
               v-----
    9|         super(
   10|             super(0)
   11|         );
               ^

References:
   multi-call-error.js:7:7
    7| class B extends A {
             ^ [1]


Error ------------------------------------------------------------------------------------------ multi-call-error.js:9:9

Cannot declare super [1] because the name is already bound. [name-already-bound]

   multi-call-error.js:9:9
               v-----
    9|         super(
   10|             super(0)
   11|         );
               ^

References:
   multi-call-error.js:7:17
    7| class B extends A {
                       ^ [1]


Error --------------------------------------------------------------------------------------------------- super.js:10:11

Cannot call `super` with `x` bound to `x` because string [1] is incompatible with number [2]. [incompatible-call]

   super.js:10:11
   10|     super(x);
                 ^

References:
   super.js:9:17
    9|   constructor(x:string,y:number) {
                       ^^^^^^ [1]
   super.js:3:17
    3|   constructor(x:number) { }
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- super.js:14:6

Cannot cast `super.staticMethod(...)` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   super.js:14:6
   14|     (super.staticMethod('foo'): number); // error, string !~> number
            ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   super.js:4:34
    4|   static staticMethod(x:string): string { return x; }
                                        ^^^^^^ [1]
   super.js:14:33
   14|     (super.staticMethod('foo'): number); // error, string !~> number
                                       ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- super.js:15:12

Cannot call `super.doesntExist` because property `doesntExist` is missing in statics of `A` [1]. [prop-missing]

   super.js:15:12
   15|     (super.doesntExist()); // error, A doesn't have a doesntExist method
                  ^^^^^^^^^^^

References:
   super.js:8:17
    8| class B extends A {
                       ^ [1]


Error --------------------------------------------------------------------------------------------------- super.js:19:13

Cannot call `super.f` with `0` bound to `x` because number [1] is incompatible with string [2]. [incompatible-call]

   super.js:19:13
   19|     super.f(0);
                   ^ [1]

References:
   super.js:5:7
    5|   f(x:string) { }
             ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- super.js:20:18

Cannot get `super.g` because property `g` is missing in `A` [1]. [prop-missing]

   super.js:20:18
   20|     return super.g;
                        ^

References:
   super.js:8:17
    8| class B extends A {
                       ^ [1]



Found 20 errors
